api criada
